# terrareg

./: .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .releaserc  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.tests  EXAMPLE.env  LICENSE  LICENSE.third-party  README.in  README.md  UPGRADE.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-all.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  terrareg.py  tox.ini
.circleci/: config.yaml
.github/workflows/: build.yml  release.yml
API/: index.html
ARCHITECTURE/: index.html
CONFIG/: index.html
CONTRIBUTING/: index.html
LOCAL_DEVELOPMENT/: index.html
MAIN/: index.html
UPGRADE/: index.html
customising/: index.html
deployment/: index.html
diagnosing_issues/: index.html
docs/: API.md  ARCHITECTURE.md  CONFIG.md  CONFIG.md.in  LOCAL_DEVELOPMENT.md  SSO.md  UPGRADE.md  UPGRADE_NOTES.md  USER_GUIDE.md  customising.md  deployment.md  diagnosing_issues.md  example-terrareg-module-config.json  example-terrareg-module-metadata.json  favicon.xcf  index.md  logo.xcf  null.xcf  quickstart.md  security.md
docs/design/: null.xcf
docs/legal/: datadog_logo_usage.txt
docs/modules/: analytics.md  best_practices.md  cost_analysis.md  misc.md  overview.md  security_scanning.md  storage.md  uploading.md
docs/providers/: index.md
modules/analytics/: index.html
providers/: index.html
quickstart/: index.html
sass/: cherry-dark.scss
scripts/: check_spelling.sh  dictionary.txt  entrypoint.sh  generate_env_config_docs.py  generate_readme.py  generate_test_gpg_key.py  preview_release_notes.sh  upload_module.sh
security/: index.html
terrareg/: analytics.py  audit.py  audit_action.py  auth.py  auth_wrapper.py  config.py  constants.py  csrf.py  database.py  errors.py  file_storage.py  filters.py  github.py  loose_version.py  markdown_link_modifier.py  models.py  module_extraction_status_type.py  module_extractor.py  module_search.py  module_security_results.py  module_version_create.py  namespace_type.py  openid_connect.py  presigned_url.py  provider_binary_types.py  provider_category_model.py  provider_documentation_type.py  provider_extractor.py  provider_model.py  provider_search.py  provider_source_type.py  provider_tier.py  provider_version_binary_model.py  provider_version_documentation_model.py  provider_version_model.py  registry_resource_type.py  repository_kind.py  repository_model.py  result_data.py  saml.py  (+9 more)
terrareg-go/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.tests  Dockerfile.vanilla  Makefile  go.mod  go.sum  integration_testing_plan.md
test/: __init__.py  test_gpg_key.py
traefik/: dynamic_conf.yaml  traefik.yaml
(+1213 files in other folders)
