[project]
name = "terrareg"
version = "3.13.5"
description = "Open source Terraform Registry"
authors = [
    {name = "Matthew John",email = "github@colamail.co.uk"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
