[project]
name = "terrareg"
dynamic = ['version']
description = "Open source Terraform Registry"
authors = [
    {name = "Matthew John",email = "github@colamail.co.uk"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "alembic (==1.10.4)",
    "aniso8601 (==9.0.1)",
    "cffi (==1.15.1)",
    "click (==8.1.3)",
    "cryptography (==44.0.1)",
    "flask (==2.2.5)",
    "flask-restful (==0.3.9)",
    "importlib-metadata (==6.6.0)",
    "importlib-resources (==5.12.0)",
    "itsdangerous (==2.1.2)",
    "jinja2 (==3.1.6)",
    "mako (==1.2.4)",
    "markdown (==3.4.3)",
    "markdown2 (==2.4.11)",
    "markupsafe (==2.1.2)",
    "pycparser (==2.21)",
    "pyopenssl (==24.3.0)",
    "python-magic (==0.4.27)",
    "pytz (==2023.3)",
    "six (==1.16.0)",
    "sqlalchemy (==1.4.45)",
    "werkzeug (==3.0.6)",
    "zipp (==3.19.1)",
    "mysql-connector-python (==9.1.0)",
    "beautifulsoup4 (==4.12.2)",
    "bleach (==6.0.0)",
    "webencodings (==0.5.1)",
    "oauthlib (==3.2.2)",
    "requests (==2.32.4)",
    "pyjwt (==2.7.0)",
    "python3-saml (==1.15.0)",
    "mdx-truly-sane-lists (==1.3)",
    "pygraphviz (==1.10)",
    "networkx (==3.1)",
    "pydot (==1.4.2)",
    "sentry-sdk (==1.45.1)",
    "urllib3 (==2.5.0)",
    "blinker (==1.6.2)",
    "semantic-version (==2.10.0)",
    "waitress (==3.0.1)",
    "pyop (==3.4.0)",
    "python-gnupg (==0.5.1)",
    "python-frontmatter (==1.0.0)",
    "pyyaml (==6.0.1)",
    "packaging (==21.3)",
    "boto3 (==1.39.17)",
    "botocore (==1.39.17)",
    "jmespath (==1.0.1)",
    "python-dateutil (==2.8.2)",
    "setuptools (==78.1.1)",
    "s3transfer (==0.13.0)",
    "lxml (>=4.9.1,<=6.0.0)",
    "xmlsec (==1.3.14)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pathspec (>=0.12.1,<0.13.0)",
    "tarsafe (==0.0.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

[tool.poetry]
version = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "3.0.0"
selenium = "4.34.1"
pyvirtualdisplay = "3.0"
pillow = "10.3.0"
imagehash = "4.3.1"
numpy = ">=1.22.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-glightbox = "0.3.7"
mkdocs-material = "9.5.8"
mkdocs-material-extensions = "1.3.1"